# yonder

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-MIT  README.md  about.hbs  about.toml  deny.toml
.cargo/: config.toml
.github/actions/secure-directory/: action.yml
.github/scripts/: install-actionlint.sh  run-network-matrix.sh  test-verify-release-assets.sh  verify-release-assets.sh  verify-security-exceptions.sh
.github/workflows/: ci.yml  recover-release.yml  release.yml
crates/yon/: Cargo.toml
crates/yon-relay/: Cargo.toml
crates/yon-relay/src/: identity.rs  lib.rs  main.rs  registry.rs  secret_file.rs  service.rs
crates/yon-relay/tests/: cli.rs
crates/yon/benches/: opaque.rs
crates/yon/src/: controller.rs  host.rs  lib.rs  main.rs  network.rs  pake.rs  progress.rs  protocol.rs  shutdown.rs  terminal.rs
crates/yon/tests/: cli.rs  end_to_end.rs
crates/yon/tests/fixtures/: localhost-self-signed-cert.der  localhost-self-signed-key.der  localhost-test-ca.der  localhost-test-cert.der  localhost-test-key.der
crates/yonder-config/: Cargo.toml
crates/yonder-config/src/: lib.rs
crates/yonder-core/: Cargo.toml
crates/yonder-core/benches/: core.rs
crates/yonder-core/src/: code.rs  diagnostic.rs  domain.rs  error.rs  lib.rs  pake.rs  random.rs  rate.rs  resource.rs  roster.rs  secret.rs  session.rs  time.rs
crates/yonder-core/src/wire/: auth.rs  mod.rs  registry.rs  resolve.rs  terminal.rs
crates/yonder-net/: Cargo.toml
crates/yonder-net/benches/: path.rs
crates/yonder-net/src/: address.rs  behaviour.rs  connection.rs  error.rs  identity.rs  lib.rs  node.rs  path.rs  streams.rs  tasks.rs  transport.rs
crates/yonder-net/tests/: behaviour_callbacks.rs
docs/: operations-manual.md
docs/design/: README.md  architecture.md  product.md  protocol.md  security-and-dependencies.md  traceability.md  validation.md  verification.md
fuzz/: Cargo.toml  deny.toml
fuzz/fuzz_targets/: connection_code.rs  network_address.rs  session_state.rs  wire_protocol.rs
