[package]
name = "yon-relay"
description = "Self-hosted rendezvous and circuit relay for Yonder"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
clap.workspace = true
serde.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
yonder-config = { version = "=0.1.0", path = "../yonder-config", default-features = false }
yonder-core = { version = "=0.1.0", path = "../yonder-core", default-features = false }
yonder-net = { version = "=0.1.0", path = "../yonder-net", default-features = false }

[lints]
workspace = true
