[package]
name = "yonder-core"
description = "Type-safe domain and wire protocol primitives for Yonder"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
data-encoding.workspace = true
governor.workspace = true
rand.workspace = true
thiserror.workspace = true
tracing.workspace = true
zeroize.workspace = true

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true

[[bench]]
name = "core"
harness = false

[lints]
workspace = true
