[package]
name = "yonder-net"
description = "Shared libp2p networking for Yonder endpoints and relays"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
backon.workspace = true
futures.workspace = true
libp2p.workspace = true
libp2p-stream.workspace = true
rustls-pki-types.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
yonder-core = { version = "=0.1.0", path = "../yonder-core", default-features = false }

[dev-dependencies]
criterion.workspace = true
libp2p-swarm-test.workspace = true
proptest.workspace = true

[[bench]]
name = "path"
harness = false

[lints]
workspace = true
